--- a/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
@@ -1,6 +1,8 @@
 = Messages
 :keywords: messages
+:id: ZZ5Q7JY
 :author: team-crm
+
 
 :key-figure: Messages
 
@@ -8,7 +10,7 @@ include::partial$key-figure-introduction.adoc[]
 
 plentymarkets calculates the key figure *Messages* based on the number of messages or the sum of minutes that were saved for the messages.
 
-By choosing a <<#100, calculation type>>, you decide whether to calculate with the number of messages or the sum of minutes. In addition, select a <<#200, dimension>> and <<#300, filters>> to specify the criteria of the messages.
+By selecting a xref:business-decisions:messages.adoc#100[calculation type], you decide whether to calculate with the number of messages or the sum of minutes. In addition, select a xref:business-decisions:messages.adoc#200[dimension] and xref:business-decisions:messages.adoc#300[filters] to specify the criteria for calculating the messages.
 
 [#100]
 == Calculation
@@ -36,24 +38,31 @@ include::partial$sum-minutes.adoc[]
 :filtered-data: the messages
 :this-means: This means that the date on which the messages were created is considered in the calculation.
 
-include::partial$created-at.adoc[]
+include::partial$erstellt-am.adoc[]
 
-=== Creation date & user
+=== Creation date, User
 
 :key-figure: The key figure Messages
 :this-means: This way, you can see at a glance when the messages were created. A further differentiation is made according to the users of the messages.
 
 include::partial$creation-date-user.adoc[]
 
-=== Creation date & tag
+=== Creation date, Tag
 
 :key-figure: The key figure Messages
 :this-means: This way, you can see at a glance when the messages were created. A further differentiation is made according to the tags that are linked with the message.
 
 include::partial$creation-date-tag.adoc[]
 
+=== Creation date, Tag, User
+
+:key-figure: The key figure Messages
+:this-means: This way, you can see at a glance when the messages were created. A further differentiation is made according to the tags that are linked with the message as well as the user who created the message.
+
+include::partial$creation-date-tag-user.adoc[]
+
 [#300]
-== Filter
+== Filters
 
 include::partial$filter-introduction.adoc[]
 
@@ -61,11 +70,12 @@ include::partial$filter-introduction.adoc[]
 
 :filtered-data: the messages
 
-include::partial$created-at.adoc[]
+include::partial$erstellt-am.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
+
 
 :filter-ending: selected dates (icon:calendar[])
 :filter: selected dates (icon:calendar[])
@@ -74,7 +84,7 @@ include::partial$created-at.adoc[]
 [[table-key-figures-operators-created-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -97,10 +107,12 @@ include::partial$less-than.adoc[]
 
 :filtered-data: the messages
 
+
 include::partial$done-at.adoc[]
 
+
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -110,7 +122,7 @@ include::partial$done-at.adoc[]
 [[table-key-figures-operators-done-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -136,7 +148,7 @@ include::partial$less-than.adoc[]
 include::partial$updated-at.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -146,7 +158,7 @@ include::partial$updated-at.adoc[]
 [[table-key-figures-operators-updated-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -172,7 +184,7 @@ include::partial$less-than.adoc[]
 include::partial$deleted-at.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -182,7 +194,7 @@ include::partial$deleted-at.adoc[]
 [[table-key-figures-operators-deleted-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -215,7 +227,7 @@ include::partial$minutes.adoc[]
 [[table-key-figures-operators-minutes]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -244,17 +256,19 @@ include::partial$chargeable.adoc[]
 include::partial$from-user.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: users selected
+
 :filter: users selected
+
 :commas:
 
 [[table-key-figures-operators-from-user]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -268,22 +282,26 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 --
 
+
+
 // From email
 
-include::partial$from-email.adoc[]
+include::partial$von-e-mail.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: email addresses entered
+
 :filter: email addresses entered
+
 :commas:
 
 [[table-key-figures-operators-from-email]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -309,13 +327,15 @@ include::partial$from-contact-id.adoc[]
 --
 
 :filter-ending: contact IDs entered
+
 :filter: contact IDs entered
+
 :commas: Use commas to separate multiple contact IDs.
 
 [[table-key-figures-operators-from-contact-id]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -334,17 +354,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$referrer.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: referrers selected
+
 :filter: referrers selected
+
 :commas:
 
 [[table-key-figures-operators-referrer]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -365,7 +387,7 @@ You can choose between the referrers *Back end*, *Plugin*, *REST API* and *Syste
 include::partial$contact-id.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: contact IDs entered
@@ -374,7 +396,7 @@ include::partial$contact-id.adoc[]
 [[table-key-figures-operators-contact-id]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -401,14 +423,13 @@ include::partial$order-id.adoc[]
 [[table-key-figures-operators-order-id]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
 include::partial$is-not-equal.adoc[]
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
-
 
 |====
 
@@ -419,17 +440,19 @@ include::partial$corresponds-to-one-of-these-values.adoc[]
 include::partial$tag.adoc[]
 
 [.collapseBox]
-.Relational operators available for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected tags
 :filter: selected tags
+
+
 :commas:
 
 [[table-key-figures-operators-tag]]
 [cols="1,1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -451,7 +474,7 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 include::partial$key-figure-requirement-raw-data.adoc[]
 
-* xref:business-decisions:messages-raw-data.adoc#[messages]
+* * xref:business-decisions:messages-raw-data.adoc#[messages]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
 
@@ -462,5 +485,7 @@ include::partial$key-figure-requirement-edition.adoc[]
 
 ////
 [#600]
-== Practical example
+== Praxisbeispiel
+
+  
 ////
