--- a/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
@@ -40,7 +40,7 @@ include::partial$lieferland-erstellungsdatum.adoc[]
 === Warenausgangsdatum
 
 :kennzahl: Die Kennzahl Aufträge
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Waren für Aufträge versandt wurden, einbezogen.
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
 
 include::partial$warenausgangsdatum.adoc[]
 
@@ -121,24 +121,24 @@ include::partial$lager-zahlungsdatum.adoc[]
 
 include::partial$mandant-zahlungsdatum.adoc[]
 
-=== Auftragsherkunft, Warenausgangsdatum
+=== Auftragsherkunft, Fertigstellungsdatum
 
 :kennzahl: Die Kennzahl Aufträge
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Aufträge aufgeschlüsselt nach Auftragsherkunft generiert werden. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Aufträge aufgeschlüsselt nach Auftragsherkunft generiert werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
 
-=== Lager, Warenausgangsdatum
+=== Lager, Fertigstellungsdatum
 
 :kennzahl: Die Kennzahl Aufträge
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Aufträge aufgeschlüsselt nach Lager generiert werden. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Aufträge aufgeschlüsselt nach Lager generiert werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$lager-warenausgangsdatum.adoc[]
 
-=== Mandant, Warenausgangsdatum
+=== Mandant, Fertigstellungsdatum
 
 :kennzahl: Die Kennzahl Aufträge
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Aufträge aufgeschlüsselt nach Mandant generiert werden. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Aufträge aufgeschlüsselt nach Mandant generiert werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$mandant-warenausgangsdatum.adoc[]
 
