--- a/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
@@ -57,7 +57,7 @@ include::partial$lieferland-erstellungsdatum.adoc[]
 === Warenausgangsdatum
 
 :kennzahl: Der Absatz
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Waren für Aufträge versandt wurden, einbezogen.
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
 
 include::partial$warenausgangsdatum.adoc[]
 
@@ -138,24 +138,24 @@ include::partial$lager-zahlungsdatum.adoc[]
 
 include::partial$mandant-zahlungsdatum.adoc[]
 
-=== Auftragsherkunft, Warenausgangsdatum
+=== Auftragsherkunft, Fertigstellungsdatum
 
 :kennzahl: Der Absatz
-:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Auftragsherkunft verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Auftragsherkunft verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
 
-=== Lager, Warenausgangsdatum
+=== Lager, Fertigstellungsdatum
 
 :kennzahl: Der Absatz
-:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Lager verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Lager verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$lager-warenausgangsdatum.adoc[]
 
-=== Mandant, Warenausgangsdatum
+=== Mandant, Fertigstellungsdatum
 
 :kennzahl: Der Absatz
-:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Mandant verkauft werden.. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Mandant verkauft werden.. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$mandant-warenausgangsdatum.adoc[]
 
