--- a/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
@@ -41,7 +41,7 @@ include::partial$lieferland-erstellungsdatum.adoc[]
 === Warenausgangsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Waren für Aufträge versandt wurden, einbezogen.
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
 
 include::partial$warenausgangsdatum.adoc[]
 
@@ -122,24 +122,24 @@ include::partial$lager-zahlungsdatum.adoc[]
 
 include::partial$mandant-zahlungsdatum.adoc[]
 
-=== Auftragsherkunft, Warenausgangsdatum
+=== Auftragsherkunft, Fertigstellungsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Auftragsherkunft generiert. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Auftragsherkunft generiert. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
 
-=== Lager, Warenausgangsdatum
+=== Lager, Fertigstellungsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$lager-warenausgangsdatum.adoc[]
 
-=== Mandant, Warenausgangsdatum
+=== Mandant, Fertigstellungsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welcher Mandant generiert. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welcher Mandant generiert. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$mandant-warenausgangsdatum.adoc[]
 
