--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -183,7 +183,7 @@ Fordere nun im plentymarkets Forum die FTP-Zugangsdaten und API-Daten an. Diese 
   * Zugangsdaten zum plentymarkets FTP-Server für Silhouetten +
   *_Tipp:_* Auf diesen FTP-Server sendet Zalando deine Silhouetten, damit sie in dein System importiert werden können. plentymarkets importiert die Silhouetten jeden Mittwoch.
 . Trage in Zeile 5 der Datei den Benutzernamen ein, den du im Menü *Einrichtung » Märkte » Zalando » Einstellungen* gewählt hast.
-. Trage in Zeile 6 der Datei das Kennwort ein, das du im Menü *Einrichtung » Märkte » Zalando » Einstellungen* als *Benutzer* gewählt hast.
+. Trage in Zeile 6 der Datei das Kennwort ein, das du im Menü *Einrichtung » Märkte » Zalando » Einstellungen* gewählt hast.
 . Leite das ausgefüllte Formular an deine Kontaktperson bei Zalando weiter. +
 → Zalando schaltet den Verkaufskanal für dich frei.
 
@@ -824,7 +824,7 @@ include::_includes:partial$event-procedure.adoc[]
 == Datenaustausch starten: Zalando-Konto aktivieren
 
 Du hast alle Einstellungen vorgenommen? Dann kann es jetzt losgehen!
-Ativiere dein Zalando-Konto im Assistenten *Kontoeinstellungen - Zalando*, um den Datenaustausch mit Zalando zu starten.
+Aktiviere dein Zalando-Konto im Assistenten *Kontoeinstellungen - Zalando*, um den Datenaustausch mit Zalando zu starten.
 
 [.collapseBox]
 .Vorgehen bei "Dieses Konto kann nicht aktiviert werden."
