--- a/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
@@ -235,19 +235,50 @@ Wähle das Attribut aus der Dropdown-Liste.
 Diese Dropdown-Liste enthält nur die Attribute, die schon in plentymarkets vorhanden sind.
 |===
 
+[#sales-price-mapping]
+=== Schritt "Verkaufspreise zuordnen"
+
+In SPoCC gibt es drei Preise:
+
+* Verkaufspreis
+* Zielpreis
+* Unverbindlicher Verkaufspreis
+
+[[table-sales-prices]]
+.Zuordnung der Verkaufspreise
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Verkaufspreis*
+|Welchen plentymarkets Verkaufspreis möchtest du für den Verkaufspreis in SPoCC verwenden?
+Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste.
+
+*_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
+Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
+
+| *Zielpreis*
+|Welchen plentymarkets Verkaufspreis möchtest du für den Zielpreis in SPoCC verwenden?
+Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste.
+
+*_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
+Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
+
+| *Unverbindlicher Verkaufspreis*
+|Welchen plentymarkets Verkaufspreis möchtest du für den unverbindlichen Verkaufspreis in SPoCC verwenden?
+Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste.
+
+*_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
+Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
+|===
+
 [#43]
-=== Schritt "Zuordnung der Eigenschaften"
+=== Schritt "Eigenschaften zuordnen"
 
 SPoCC-Attribute bildest du in plentymarkets als Eigenschaften ab.
 Ordne deinen SPoCC-Attributen in diesem Schritt deshalb plentymarkets Eigenschaften zu.
 
 // TODO: Erklären, was Attribute bei SPoCC sind.
-
-[[table-property-mapping]]
-.Zuordnung der Eigenschaften
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
 
 . Wähle aus der Dropdown-Liste *plentymarkets Eigenschaft* links eine Eigenschaft. +
 *_Voraussetzung_*: Hast du schon xref:artikel:eigenschaften.adoc#[Eigenschaften in plentymarkets konfiguriert]?
@@ -255,9 +286,26 @@ Diese Dropdown-Liste enthält nur die Eigenschaften, die schon in plentymarkets 
 . Wähle aus der Dropdown-Liste *SPoCC-Attribut* rechts ein Attribut. +
 → Die beiden Datensätze werden einander zugeordnet.
 
+[[table-property-mapping]]
+.Zuordnung der Eigenschaften
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *SPoCC-Attribut*
+|Dies sind deine Attribute bei SPoCC.
+Wähle das passende Attribut aus der Dropdown-Liste.
+
+| *plentymarkets Eigenschaft*
+|Dies sind die Kategorien, die du in plentymarkets eingerichtet hast.
+Wähle die passende Eigenschaft aus der Dropdown-Liste.
+
+*_Voraussetzung_*: Hast du schon xref:artikel:eigenschaften.adoc#[Eigenschaften in plentymarkets konfiguriert]?
+Diese Dropdown-Liste enthält nur die Eigenschaften, die schon in plentymarkets vorhanden sind.
+
 | icon:plus[role="green"]
-|Fügt eine weitere Zeile hinzu.
-Auf diese Weise kannst du mehrere Kategorien zuordnen.
+| Fügt eine weitere Zeile hinzu.
+Auf diese Weise kannst du mehrere Eigenschaften zuordnen.
 
 | icon:minus-circle[role="red"]
 |Löscht eine Zeile.
@@ -267,10 +315,12 @@ Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
 // TODO: Beispiel einfügen mit Screenshot
 
 [#category-mapping]
-=== Zuordnung der Kategorien
+=== Schritt "Kategorien zuordnen"
 
 In diesem Schritt ordnest du deine in SPoCC verwendeten Produktgruppen den Kategorien in plentymarkets zu.
 So werden deine Artikel schon in die richtigen plentymarkets Kategorien einsortiert, wenn sie von SPoCC importiert werden.
+
+*_Wichtig:_* Artikel in SPoCC-Kategorien, die du in diesem Schritt nicht zugeordnet hast, werden in die Kategorie einsortiert, die du im Schritt *Optionen des Artikelimports* als Standardkategorie gewählt hast.
 
 [[table-category-mapping]]
 .Zuordnung der Kategorien
@@ -284,285 +334,67 @@ Wähle die passende Produktgruppe aus der Dropdown-Liste.
 
 | *plentymarkets Kategorie*
 | Dies sind die Kategorien, die du in plentymarkets eingerichtet hast.
-Wähle die passende Kategorie aus der Dropdown-Liste aus.
+Wähle die passende Kategorie aus der Dropdown-Liste.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:kategorien.adoc#[Kategorien in plentymarkets erstellt]?
 Diese Dropdown-Liste enthält nur die Kategorien, die schon in plentymarkets vorhanden sind.
 
 | icon:plus[role="green"]
-|Fügt eine weitere Zeile hinzu.
+| Fügt eine weitere Zeile hinzu.
 Auf diese Weise kannst du mehrere Kategorien zuordnen.
 
 | icon:minus-circle[role="red"]
-|Löscht eine Zeile.
-Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
-|===
-
-[#43]
-=== Standorte im Lager berücksichtigen
-
-In diesem Schritt entscheidest du, ob plentymarkets den genauen Standort jedes Artikels im Lager erfassen soll.
-
-*_Hintergrund-Wissen_*:
-
-* Mit plentymarkets kannst du nicht nur den Bestand eines Artikels nachverfolgen, sondern auch, wo sich der Artikel im Lager befindet.
-** In plentymarkets wird der Standort des Artikels als "Lagerort" bezeichnet.
-** In SPoCC wird der Standort des Artikels als "Shop" bezeichnet.
-
-[[table-storage-location-function]]
-.Standorte im Lager berücksichtigen
-[cols="1,3a"]
-|===
-|Einstellung |Erläuterung
-
-| *Standorte berücksichtigen*
-|Soll plentymarkets den genauen Standort jedes Artikels im Lager erfassen?
-
-icon:toggle-on[role="blue"] = Der genaue Lagerort des Artikels wird erfasst.
-Wenn sich der Lagerbestand ändert, d.h. wenn ein Artikel ein- oder ausgebucht wird, dann wird der spezifische Lagerort berücksichtigt.
-Hast du diese Funktion aktiviert, dann musst du auch die Einstellungen in Schritt *Zuordnung der Standorte* vornehmen.
-
-icon:toggle-off[role="darkGrey"] = Der Lagerort des Artikels wird nicht erfasst.
-In plentymarkets wird der Lagerort immer als "Standard" angegeben.
-
-|===
-
-[#46]
-=== Zuordnung der Standorte
-
-In diesem Schritt ordnest du deine SPoCC-Shops deinen plentymarkets Lagerorten zu.
-Die Lagerorte in plentymarkets werden dabei automatisch generiert.
-
-*_Beispiel_*:
-
-* Über den Artikelimport erhält plentymarkets die Information, dass ein Artikel im SPoCC-Shop 1234 liegt.
-* Daraus erstellt das Plugin automatisch einen passenden plentymarkets-Lagerort im Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Lagerorte* und verknüpft ihn in diesem Schritt des Assistenten.
-
-[[table-storage-location-mapping]]
-.Zuordnung der Standorte
-[cols="1,3a"]
-|===
-|Einstellung |Erläuterung
-
-| *SPoCC-Filiale*
-|Dies sind die bestandsführenden Filialen in SPoCC.
-Wähle die passende Filiale aus der Dropdown-Liste aus.
-
-| *SPoCC-Shop*
-|Dies sind die Shop-Namen in SPoCC.
-Wähle den passenden Shop aus der Dropdown-Liste aus.
-
-| *plentymarkets-Lagerort*
-|Dies sind die Lagerort-IDs im plentymarkets-Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Lagerorte*.
-
-|===
-
-[TIP]
-.Logik der Namensgebung
-====
-Deine automatisch generierten Lagerorte findest du im Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Lagerorte*.
-Der Name des Lagerorts folgt immer einer bestimmten Logik.
-Die Lagerorte heißen: `SPoCC level:SPoCC SL for shop 1234`.
-Dabei steht `1234` für die SPoCC-Shopnummer.
-Diese Benennung kann man nicht anpassen.
-Sie ist fest vorgegeben.
-====
-
-[#50]
-=== Zuordnung der Bestandsfilialen
-
-In diesem Schritt ordnest du deine bestandsführenden SPoCC-Filialen deinen plentymarkets Lagern zu.
-So werden deine Bestände in SPoCC und plentymarkets miteinander abgeglichen und aktualisiert.
-Sinkt zum Beispiel der Bestand in SPoCC, dann wird plentymarkets auch über diese Änderung informiert.
-
-[[table-stock-branch-matching]]
-.Zuordnung der bestandsführenden Filialen
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *SPoCC-Filiale*
-|Dies sind die bestandsführenden Filialen in SPoCC.
-Wähle die passende Filiale aus der Dropdown-Liste aus.
-
-| *plentymarkets Lager*
-|Dies sind die Lager, die du in plentymarkets eingerichtet hast.
-Wähle das passende Lager aus der Dropdown-Liste aus.
-
-*_Voraussetzung_*:
-Hast du schon xref:warenwirtschaft:lager-einrichten.adoc#[Lager in plentymarkets erstellt]?
-Diese Dropdown-Liste enthält nur die Lager, die schon in plentymarkets vorhanden sind.
-
-| icon:plus[role="green"]
-|Fügt eine weitere Zeile hinzu.
-Auf diese Weise kannst du mehrere Filialen und Lager zuordnen.
-
-| icon:minus-circle[role="red"]
-|Löscht eine Zeile.
-Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
-|===
-
-[TIP]
-.Eine 1:1-Zuordnung ist am besten
-====
-* Im Idealfall solltest du ein 1:1-Zuordnung erstellen.
-* Es macht keinen Sinn, mehrere plentymarkets Lager mit ein und derselben SPoCC-Filiale zu verknüpfen.
-In diesem Fall würden deine Daten mehrfach von SPoCC nach plentymarkets übertragen werden.
-Die Daten werden nicht aufgesplittet.
-====
-
-[#60]
-=== Zuordnung der Umsatzfilialen
-
-In diesem Schritt ordnest du deine plentymarkets Verkaufskanäle den passenden SPoCC-Umsatzfilialen zu.
-Stell dir vor, du hast gerade ein Produkt auf einem Markt wie eBay, Amazon oder Check24 verkauft.
-In welcher Filiale sollen die Umsätze gebucht und die Auftragsdaten übermittelt werden?
-
-[[table-sales-branch-matching]]
-.Zuordnung der Umsatzfilialen
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *SPoCC-Filiale*
-|Dies sind die Umsatzfilialen in SPoCC.
-Wähle die passende Filiale aus der Dropdown-Liste aus.
-
-| *Mandant (Shop)*
-|Dies sind die Mandanten, die du mit plentymarkets betreibst.
-Wähle den passenden Mandanten aus der Dropdown-Liste aus.
-
-Wenn ein Auftrag an SPoCC übertragen wird, enthält er Informationen darüber, auf welchen Mandanten er sich bezieht.
-
-| *Auftragsherkünfte*
-|Dies sind die Auftragsherkünfte, die du in plentymarkets nutzt.
-Wähle die passenden Herkünfte aus (icon:check-square[role="blue"]).
-
-Wenn ein Auftrag an SPoCC übertragen wird, enthält er Informationen darüber, aus welchem Verkaufskanal er stammt.
-So kannst du auf SPoCC-Seite statistisch festhalten, welche Vertriebskanäle besonders gewinnbringend sind oder welche die meisten Retouren verursachen.
-
-*_Voraussetzung_*:
-Hast du schon die passenden xref:auftraege:auftragsherkunft.adoc#[Herkünfte in plentymarkets aktiviert]?
-Diese Dropdown-Liste enthält nur die aktivierten Herkünfte.
-
-| icon:plus[role="green"]
-|Fügt eine weitere Zeile hinzu.
-Auf diese Weise kannst du mehrere Filialen und Verkaufskanäle zuordnen.
-
-| icon:minus-circle[role="red"]
-|Löscht eine Zeile.
-Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
-|===
-
-[#90]
-=== Zuordnung der Verkaufspreise
-
-* Im oberen Bereich ordnest du deine in SPoCC verwendeten Verkaufspreise den Verkaufspreisen in plentymarkets zu.
-* Im unteren Bereich ordnest du den in SPoCC verwendeten Aktionspreis einem Verkaufspreis in plentymarkets zu.
-
-[[table-sales-prices]]
-.Zuordnung der Verkaufspreise
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-2+^| *Verkaufspreise*
-
-| *VK-Preis*
-|Welchen plentymarkets Verkaufspreis möchtest du für den VK-Preis in SPoCC verwenden?
-Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste aus.
-
-*_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
-Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
-
-| *VK-Preis (Etikett)*
-|Welchen plentymarkets Verkaufspreis möchtest du für den VK-Preis (Etikett) in SPoCC verwenden?
-Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste aus.
-
-*_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
-Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
-
-2+^| *SPoCC-Aktionspreis*
-
-| *ID des SPoCC-Aktionspreises*
-|Wie lautet die ID deines Aktionspreises in SPoCC?
-Gib die ID in dieses Feld ein.
-
-| *VK-Preis (Aktionspreis)*
-|Welchen plentymarkets Verkaufspreis willst du deinem SPoCC Aktionspreis zuordnen?
-Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste aus.
-
-*_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
-Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
-
-| *Von*; +
-*Bis*
-|In welchem Zeitraum soll dieser Verkaufspreis gelten?
-Wähle die Von- und Bis-Daten aus den Dropdown-Listen aus.
-
-*_Voraussetzung_*: Hast du schon xref:artikel:eigenschaften.adoc#[Eigenschaften in plentymarkets konfiguriert]?
-Diese Dropdown-Liste enthält nur die Eigenschaften, die schon in plentymarkets vorhanden sind.
-Es ist sinnvoll, die Von- und Bis-Daten mit Eigenschaften vom Typ "Datum" umzusetzen.
-
-|===
-
-[TIP]
-.Keine Zuordnung für EK nötig
-====
-Der SPoCC-Einkaufspreis wird statisch dem plentymarkets Netto-Einkaufspreis zugeordnet.
-Das bedeutet, dass du den SPoCC-EK nicht mit dem plentymarkets EK verknüpfen musst.
-Er ist schon zugeordnet.
-====
-
-[#100]
-=== Zuordnung der Kategorien
-
-In diesem Schritt ordnest du deine in SPoCC verwendeten Warengruppen den Kategorien in plentymarkets zu.
-So werden deine Artikel schon in die richtigen plentymarkets Kategorien einsortiert, wenn sie von SPoCC importiert werden.
-
-[[table-category-mapping]]
-.Zuordnung der Kategorien
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *Standard Artikelkategorie*
-|Stell dir vor, du hast eine neue SPoCC-Warengruppe erstellt.
-Du hast aber vergessen, die Warengruppe einer Kategorie in plentymarkets zuzuordnen.
-Wenn Artikel aus der nicht zugeordneten Warengruppe importiert werden, landen sie in der Standardkategorie.
-
-| *SPoCC-Warengruppe*
-|Dies sind deine Warengruppen in SPoCC.
-Wähle die passende Warengruppe aus der Dropdown-Liste aus.
-
-| *plentymarkets Kategorie*
-|Dies sind die Kategorien, die du in plentymarkets eingerichtet hast.
-Wähle die passende Kategorie aus der Dropdown-Liste aus.
-
-*_Voraussetzung_*: Hast du schon xref:artikel:kategorien.adoc#[Kategorien in plentymarkets erstellt]?
-Diese Dropdown-Liste enthält nur die Kategorien, die schon in plentymarkets vorhanden sind.
-
-| icon:plus[role="green"]
-|Fügt eine weitere Zeile hinzu.
-Auf diese Weise kannst du mehrere Kategorien zuordnen.
-
-| icon:minus-circle[role="red"]
-|Löscht eine Zeile.
+| Löscht eine Zeile.
 Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
 |===
 
 [TIP]
 .Alternativer Ablauf ohne Kategoriezuordnung
 ====
-Technisch gesehen könntest du nur eine Standard-Artikelkategorie wählen und den Rest der Kategoriezuordnung überspringen.
+Technisch gesehen kannst du auch nur eine Standard-Artikelkategorie wählen und den Rest der Kategoriezuordnung überspringen.
 Als Folge würden deine Artikel beim Import immer nur in der Standardkategorie landen.
-Bei Bedarf müsstest du dann manuell Artikel in andere plentymarkets Kategorien verschieben.
+Bei Bedarf musst du dann manuell Artikel in andere plentymarkets Kategorien verschieben.
 ====
 
-[#110]
-=== Cron-Einstellungen
+[#warehouse-mapping]
+=== Schritt "Lager zuordnen"
 
-Der Datenaustausch zwischen SPoCC und plentymarkets erfolgt mit Hilfe von so genannten "Crons".
+In diesem Schritt ordnest du deine Channel Store Number von SPoCC deinen plentymarkets Lagern zu.
+
+[[table-warehouse-mapping]]
+.Zuordnung von Lagern
+[cols="1,3a"]
+|===
+|Einstellung |Erläuterung
+
+| *SPoCC Channel Store Number*
+|Dies sind die Lager in SPoCC.
+Wähle die passende Channel Store Number aus der Dropdown-Liste.
+
+| *plentymarkets Lager*
+| Dies sind die Lager im plentymarkets Menü *Einrichtung » Waren » Lager*.
+
+|===
+
+[#cron-settings]
+=== [TODO] Schritt "Cron-Einstellungen"
+
+Der Datenaustausch zwischen SPoCC und plentymarkets erfolgt mit sogenannten Crons.
+
+[.collapseBox]
+.Was ist ein Cron?
+--
+Ein Cron dient der zeitbasierten Ausführung von Prozessen. Diese Ausführung erfolgt in einzelnen Cronjobs.
+
+Cronjobs sind wiederkehrende Aufgaben (Jobs), die automatisch in festen Intervallen ausgeführt werden. Diese Intervalle werden normalerweise in Minuten angegeben. Ein Cron 60 wird zum Beispiel alle 60 Minuten ausgeführt.
+
+*_Beispiel:_* Bilder werden alle 60 Minuten von SPoCC in plentymarkets importiert. Jeder dieser Importe ist ein Cronjob.
+
+Fun Fact: Cron steht für Command Run On Notice, spielt aber auch auf Chronos an, den altgriechischen Gott der Zeit.
+
+Warum du wissen musst, was ein Cron ist? Eigentlich musst du das gar nicht wissen. Du aktivierst nur den Austausch von Daten in plentymarkets. Die Intervalle sind fest hinterlegt und werden automatisch ausgeführt.
+--
+
 In diesem Schritt aktivierst du die Cron-Jobs, die automatisch ausgeführt werden sollen (icon:check-square[role="blue"]).
 
 [[table-cron-settings]]
